<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/appointmentsOverViewPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <View
        android:id="@+id/permissionsHeader"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/closeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:background="@drawable/ic_profile_close"
        app:layout_constraintBottom_toBottomOf="@+id/permissionsHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="21dp"
        android:paddingEnd="21dp"
        android:text="@string/note_title"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/permissionsHeader"
        app:layout_constraintStart_toEndOf="@+id/closeBtn"
        app:layout_constraintTop_toTopOf="@+id/permissionsHeader" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="22dp"
        app:layout_constraintBottom_toBottomOf="@+id/permissionsHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/permissionsHeader"
        app:srcCompat="@drawable/ic_baseline_share_24" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/permissionsHeader"
        android:layout_marginTop="60dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/titleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="22dp"
                android:text="@string/note_title_label"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleBox"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="22dp"
                android:layout_marginBottom="22dp"
                android:textAlignment="viewStart"
                app:boxStrokeColor="@color/cool_grey"
                tools:visibility="visible">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titleEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:gravity="top"
                    android:paddingEnd="4dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/contentLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="22dp"
                android:text="@string/note_content_label"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/contentBox"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="22dp"
                android:layout_marginBottom="22dp"
                android:textAlignment="viewStart"
                app:boxStrokeColor="@color/cool_grey"

                tools:visibility="visible">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/contentEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:gravity="top"
                    android:maxLength="5000"
                    android:minHeight="80dp"
                    android:paddingEnd="4dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/addImage"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_baseline_add_24"
                android:text="@string/add_image"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginStart="22dp"
                android:layout_marginEnd="22dp"
                android:scaleType="centerCrop"
                android:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sendBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="22dp"
                android:text="@string/save_btn" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>